--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           # stop the build if there are Python syntax errors or undefined names
           flake8 fmi --count --select=E9,F63,F7,F82 --show-source --statistics
-          flake8 fmi --count --max-complexity=10 --statistics
+          flake8 fmi --count --statistics
       - name: Test
         run: python -m unittest
